--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -5,11 +5,11 @@
   background-color: darkslateblue;
 }
 
-  .appHeader {
-    margin: auto;
-    padding-top: 2vh;
-    color: white;
-  }
+.appHeader {
+  margin: auto;
+  padding-top: 2vh;
+  color: white;
+}
 
 .sideBar {
   height: 90vh;
@@ -17,67 +17,82 @@
   background-color: lightgrey;
 }
 
-  .Calendar {
-    width: 36vh; 
-    margin: 0 2vh 2vh 2vh;
-    padding-top: 2vh;
-  }
+.Calendar {
+  width: 36vh; 
+  margin: 0 2vh 2vh 2vh;
+  padding-top: 2vh;
+}
   
-  .menuEditor {
-    display: flex;
-  }
+.menuEditor {
+  display: flex;
+}
   
-    .MenuDisplay {
-      margin: auto
-    }
+.MenuDisplay {
+  margin: auto;
+}
 
-      .menuItem p {
-        margin: 0 auto;
-      }
-      .menuItem {
-        margin: 0 auto;
-        display: flex
-      }
+.menuOptions {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
-  .DishForm,
-  .DishPicker {
-    width: 36vh;
-    margin: 1vh 2vh 2vh 2vh;
-    display: flex;
-    flex-direction: column;
-  }
+.menuOption {
+  padding: 7vw;
+}
+
+.menuItemType {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.menuItem p {
+  margin: 0 auto;
+}
+
+.menuItem {
+  margin: 0 auto;
+  display: flex;
+}
+
+.DishForm,
+.DishPicker {
+  width: 36vh;
+  margin: 1vh 2vh 2vh 2vh;
+  display: flex;
+  flex-direction: column;
+}
     
-  .DishPicker {
-    height: 15.5vh
-  }
+.DishPicker {
+  height: 15.5vh
+}
 
-  .DishForm {
-    padding-top: 2vh;
-    height: 18vh;
-    background-color: white;
-  }
+.DishForm {
+  padding-top: 2vh;
+  height: 18vh;
+  background-color: white;
+}
 
-    .dishPickerType,
-    .dishPickerName,
-    .dishFormType,
-    .dishFormName,
-    .typeFormName {
-      margin: 1vh auto;
-      width: 30vh;
-      height: 2.5vh;
-    }
-  
+.dishPickerType,
+.dishPickerName,
+.dishFormType,
+.dishFormName,
+.typeFormName {
+  margin: 1vh auto;
+  width: 30vh;
+  height: 2.5vh;
+}
 
-  .TypeForm {
-    height: 12vh;
-    width: 36vh;
-    margin: 2vh auto;
-    padding-top: 2vh;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
 
-  }
+.TypeForm {
+  height: 12vh;
+  width: 36vh;
+  margin: 2vh auto;
+  padding-top: 2vh;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
 
 label {
   margin: 1vh auto;
