--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,11 +1,15 @@
 .btn-show-me {
-  color: white;
+  color: black;
   background-color: transparent;
-  border: white 1px solid;
+  border: black 1px solid;
 }
 
 .btn-show-me:hover {
-  color: black;
-  background-color: white;
-  border: white 1px solid;
+  color: white;
+  background-color: black;
+  border: black 1px solid;
+}
+
+.bg-jumbotron {
+  background-color: whatever color you want;
 }
